# markdown-to-pdf

./: .env.example  .gitignore  Dockerfile  README.md  api_specification.md  docker-compose.yml  frontend_specification.md  pyproject.toml
app/: config.py  main.py
app/models/: requests.py  responses.py
app/routes/: convert.py  health.py
app/services/: pdf_generator.py  zip_processor.py
app/templates/: company_template.css  cover_page.html
app/utils/: file_helpers.py  validators.py
client/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.vue  main.js
client/src/components/: ApiStatus.vue  FileUpload.vue  GenerationForm.vue  InstructionsPanel.vue  LoadingSpinner.vue
client/src/composables/: useApi.js  useFileUpload.js  useZipCreation.js
client/src/data/: instructions.json
client/src/pages/: home.vue
client/src/utils/: constants.js  validation.js
scripts/: deploy.sh  setup.sh
